# disclosure-alpha

./: .coverage  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  INTERNAL_VALIDATION.md  LICENSE  README-PYPI.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
data/baselines/: item_1a_risk_factors_boilerplate_4grams_fy2025.json
data/gold_set/0000006281-25-000153/: labels.json
data/gold_set/0000018230-26-000008/: labels.json
data/gold_set/0000019617-25-000478/: labels.json
data/gold_set/0000027419-26-000016/: labels.json
data/gold_set/0000040545-26-000008/: labels.json
data/gold_set/0000064803-26-000010/: labels.json
data/gold_set/0000070858-26-000157/: labels.json
data/gold_set/0000200406-25-000043/: labels.json
data/gold_set/0000318154-26-000010/: labels.json
data/gold_set/0000320193-25-000079/: labels.json
data/gold_set/0000320193-25-000108/: labels.json
data/gold_set/0000831001-26-000011/: labels.json
data/gold_set/0000886982-26-000091/: labels.json
data/parser_eval/: README.md
data/universe/: README.md  sp500.csv
data/validation/: README.md
docs/: 01_overview.md  02_research_foundation.md  03_metrics_spec.md  04_diff_spec.md  05_aggregation_spec.md  06_v2_improvement_plan.md  07_validation_protocol.md  08_dictionary_enrichment_research.md  09_product_surfaces.md  CONTRIBUTING_DOCS.md  README.md  analytics-scoring-layer-improvement-plan.md  codebase-audit-report.md  conf.py  extraction-analytics-layer-audit.md  index.md  legal.md  readthedocs-public-docs-improvement-plan.md  requirements.txt
docs/_includes/: component-plain-english.md  pipeline-diagram.md  score-scale.md
docs/_static/: disclosure-alpha.css
docs/_templates/: base.html  page_template.md
docs/appendix/: changelog.md  glossary.md  index.md
docs/developer/: architecture.md  index.md  openbb-performance-roadmap.md  testing.md
docs/examples/: index.md  panel-response-snippet.json  score-full-coverage-snippet.json  score-minimal-10k.json  score-with-prior-snippet.json
docs/getting-started/: choose-your-surface.md  concepts.md  evidence.md  faq.md  first-successful-run.md  index.md  installation.md  quickstart-cli.md  quickstart-openbb.md  quickstart-python.md  scope-and-claims.md  sec-edgar-setup.md  understanding-scores.md
docs/guides/: index.md  production.md
docs/methodology/: aggregation.md  boilerplate-v4-diagnostics.md  diff-engine.md  index.md  metrics-engine.md  overview.md  research-foundation.md
docs/postman/: disclosure-alpha-analytics.postman_collection.json  disclosure-alpha-api.postman_collection.json  disclosure-alpha-compliance.postman_collection.json  disclosure-alpha-discovery.postman_collection.json  disclosure-alpha-panel.postman_collection.json  disclosure-alpha-scores.postman_collection.json
docs/reference/: environment-variables.md  index.md  score-catalog.md  section-taxonomy.md  versioning.md
docs/validation/: evidence-and-limitations.md  index.md
scripts/: audit_validation_corpus.py  build_boilerplate_baseline.py  build_matrix_validation_corpus.py  build_matrix_validation_corpus_from_edgar.py  build_openbb_corpus_summary.py  build_validation_corpus.py  build_validation_corpus_from_edgar.py  diagnose_boilerplate_blend.py  diagnose_item1a.py  eval_section_extraction.py  fetch_sp500_universe.py  fetch_validation_outcomes.py  generate_docs_examples.py  generate_http_endpoints_docs.py  run_fy2025_validation.py  scaffold_parser_gold_set.py  validate_deterministic_construct.py  validate_deterministic_outcomes.py  validate_dictionary_shift.py  validate_matrix_gates.py
src/disclosure_alpha/: __init__.py  analytics_config.py  baselines.py  boilerplate.py  cache.py  calibration.py  cli.py  confidence.py  deterministic_scoring.py  dictionaries.py  diff_engine.py  embedding_service.py  filing_normalizer.py  pipeline.py  pipeline_timing.py  scoring_types.py  section_extractor.py  text_cleaner.py  text_matching.py  text_metrics.py  version.py
tests/: conftest.py  html_fixtures.py  test_analytics_config.py  test_api.py  test_api_changes.py  test_api_composite.py  test_api_flags.py  test_api_matrix_tiers.py  test_api_panel.py  test_boilerplate.py  test_calibration.py  test_cli.py  test_confidence.py  test_construct_validity.py  test_deterministic_scoring.py  test_dictionary_snippets.py  test_diff_engine.py  test_docs_examples.py  test_edgar_client.py  test_edgar_resolver.py  test_matrix_validation.py  test_mcp.py  test_mcp_analyst.py  test_mcp_builder.py  test_mcp_http_mount.py  test_metrics_cache.py  test_monotonicity.py  test_openbb.py  test_openbb_core.py  test_outcomes.py  test_panel_parallel.py  test_pipeline.py  test_pipeline_config.py  test_pipeline_timing.py  test_section_extractor.py  test_text_metrics.py  test_validation_report_versions.py  test_validation_scoring_version.py  test_version_sync.py
tests/fixtures/: dictionary_near_miss_snippets.json  sample_10k.html
(+142 files in other folders)
