[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disclosure-alpha"
version = "0.1.0"
description = "Open-source deterministic SEC filing analytics: parse, metrics, diff, score"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Disclosure Alpha" }]
keywords = ["sec", "edgar", "10-k", "disclosure", "nlp", "mcp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.1.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0", "pydantic>=2.5.0"]
semantic = ["sentence-transformers>=2.2.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
disclosure-alpha = "disclosure_alpha.cli:main"
disclosure-alpha-mcp = "disclosure_alpha.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/disclosure_alpha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
