[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disclosure-alpha"
version = "1.1.0"
description = "Open-source deterministic SEC filing analytics: parse, metrics, diff, score"
readme = "README-PYPI.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Alwan", email = "alwan.alkautsar@gmail.com" }]
keywords = ["sec", "edgar", "10-k", "disclosure", "nlp", "mcp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.1.0",
  "numpy>=1.26.0",
  "sec-parser>=0.58.1,<0.59",
  "scikit-learn>=1.4.0",
]

[project.urls]
Homepage = "https://disclosure-alpha.readthedocs.io/en/latest/"
Documentation = "https://disclosure-alpha.readthedocs.io/en/latest/"
Repository = "https://github.com/alwank/disclosure-alpha"
Issues = "https://github.com/alwank/disclosure-alpha/issues"
Changelog = "https://github.com/alwank/disclosure-alpha/blob/main/docs/appendix/changelog.md"

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.5.0"]
mcp = ["mcp>=1.0.0", "pydantic>=2.5.0"]
semantic = ["sentence-transformers>=2.2.0"]
validation = ["spacy>=3.7.0"]
outcomes = ["yfinance>=0.2.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "httpx2>=2.4.0,<3"]

[project.scripts]
disclosure-alpha = "disclosure_alpha.cli:main"
disclosure-alpha-api = "disclosure_alpha.api.app:main"
disclosure-alpha-mcp = "disclosure_alpha.mcp.server:main"
disclosure-alpha-mcp-analyst = "disclosure_alpha.mcp.analyst:main"
disclosure-alpha-mcp-builder = "disclosure_alpha.mcp.builder:main"

[tool.hatch.build.targets.wheel]
packages = ["src/disclosure_alpha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: live network / external API"]

[tool.coverage.run]
source = ["disclosure_alpha"]
omit = ["*/disclosure_alpha/validation/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
